force-app/main/default/objects/MySetup_Product_User__c/MySetup_Product_User__c.object-meta.xml
<CustomObject>
    <description>Custom created object containing the relationship between product and user object.. that wich product is assigned to which user.</description>
    <label>MySetup Product User</label>
    <nameField>
        <label>MySetup Product User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MySetup Product Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>