force-app/main/default/objects/MySetup_Product_User__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines which particular record will be the favourite one for a certain user</description>
    <label>Favourite</label>
    <type>Checkbox</type>
</CustomField>