force-app/main/default/objects/MySetup_Product_User__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the details of the product object which will be assigned to a particular user object</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MySetup Product Users</relationshipLabel>
    <relationshipName>MySetup_Product_Users</relationshipName>
    <type>Lookup</type>
</CustomField>