force-app/main/default/objects/MySetup_Product_User__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MySetup_Product_Users</relationshipName>
    <type>Lookup</type>
</CustomField>